openshift/dsp/network-policy-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ds-pipelines-dspa-kfp-ui
  namespace: lineage
  labels:
    app.kubernetes.io/part-of: feast-kfp-mlflow
spec:
  podSelector:
    matchLabels:
      app: ds-pipeline-dspa
      component: data-science-pipelines
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kfp-ui
      ports:
        - port: 8888
          protocol: TCP
        - port: 8887
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ds-pipelines-envoy-kfp-ui
  namespace: lineage
  labels:
    app.kubernetes.io/part-of: feast-kfp-mlflow
spec:
  podSelector:
    matchLabels:
      app: ds-pipeline-metadata-envoy-dspa
      component: data-science-pipelines
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kfp-ui
      ports:
        - port: 9090
          protocol: TCP
